--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "http://askmoreapp.herokuapp.com/",
+  "proxy": "https://askmoreapp.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
